finish_frontend-conscepts

--- a/3- Frontend Concepts/client/src/index.css
+++ b/3- Frontend Concepts/client/src/index.css
@@ -20,7 +20,9 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  background: #000;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
   color: #fff;
 }
+
+
 
