--- a/1-AppForUsers/client/src/index.css
+++ b/1-AppForUsers/client/src/index.css
@@ -20,6 +20,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-  color: #fff;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  color: rgb(39, 39, 46);
+  font-size: large;
+  font-weight: bold;
 }
